# yt_idefix

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: bleeding-edge.yaml  cd.yml  ci.yml  type-checking.yaml
requirements/: tests.txt
src/yt_idefix/: __init__.py  _backports.py  api.py  data_structures.py  definitions.py  fields.py  io.py
src/yt_idefix/_io/: commons.py  dmp_io.py  h5_io.py  vtk_io.py
tests/: conftest.py  requirements.txt  test_C_io.py  test_dmp.py  test_loading.py  test_vtk.py  test_xdmf.py
tests/data/FargoMHDSpherical/: data.0010.vtk  idefix.ini  meta.yaml
tests/data/cataclysmic-disk/: idefix.ini  meta.yaml
tests/data/khi/: data.0100.vtk  idefix.ini  meta.yaml
tests/data/pluto_disk_planet/: definitions.h  incorrect_inifile  meta.yaml  pluto.ini  vtk.out
tests/data/pluto_orszag_tang/: data.0010.dbl.h5  data.0010.dbl.xmf  data.0010.flt.h5  data.0010.flt.xmf  data.0010.vtk  definitions.h  grid.out  meta.yaml  pluto.ini  vtk.out
tests/data/pluto_rotor/: definitions.h  meta.yaml  vtk.out
tests/data/pluto_sedov/: data.0018.vtk  definitions.h  meta.yaml  vtk.out
tests/data/pluto_sod/: data.0001.vtk  definitions.h  meta.yaml  vtk.out
yt_idefix/: __init__.py  _typing.py  api.py  data_structures.py  definitions.py  fields.py  io.py  loaders.py
yt_idefix/_io/: C_io.py  commons.py  dmp_io.py  vtk_io.py
yt_idefix/_vendors/: base_particle_io_handler.py  streched_grids.py
yt_idefix/frontend/: data_structures.py
yt_idefix/tests/: test_dev.py  test_dmpfile_io.py
