[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "yt_idefix"
version = "1.0.0"
description = "An extension module for yt, adding a frontend for Idefix"
authors = [
    { name = "C.M.T. Robert" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
keywords = [
    "astronomy astrophysics visualization amr adaptivemeshrefinement",
]
requires-python = ">=3.8"
dependencies = [
    "inifix>=2.3.0",
    "numpy>=1.17.3",
    "yt>=4.1.0",
]

[project.entry-points."yt.frontends"]
# these entry points require yt 4.2 (unreleased at the time of writing)
# they are included early for testing purposes
IdefixDmpkDataset = "yt_idefix.api:IdefixDmpDataset"
IdefixVtkDataset = "yt_idefix.api:IdefixVtkDataset"
PlutoVtkDataset = "yt_idefix.api:PlutoVtkDataset"

[project.license]
text = "GPL-3.0"


[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://yt-project.org/"
Documentation = "https://yt-project.org/docs/dev/"
Source = "https://github.com/neutrinoceros/yt_idefix"
Tracker = "https://github.com/neutrinoceros/yt_idefix/issues"

[tool.black]
line-length = 88
target-version = [
  'py38',
  'py39',
  'py310'
]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | yt/frontends/stream/sample_data
)/
| yt/visualization/_colormap_data.py
'''

[tool.isort]
profile = "black"
combine_as_imports = true
skip = ["venv", "benchmarks"]
known_third_party = [
  "IPython",
  "nose",
  "numpy",
  "sympy",
  "matplotlib",
  "unyt",
  "git",
  "yaml",
  "dateutil",
  "requests",
  "coverage",
  "pytest",
  "pyx",
  "glue",
]
known_first_party = ["yt"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = 3.8
show_error_codes = true
ignore_missing_imports = true # remove once yt 4.1.0 is released
warn_unused_configs = true
warn_unreachable = true
show_error_context = true

[tool.pytest.ini_options]
addopts = '''
    -s
    -v
    -rsfE
    --ignore-glob='*_nose.py'
    --ignore='yt/frontends/owls_subfind/tests/test_outputs.py'
    --ignore='yt/frontends/ramses/tests/test_outputs.py'
'''
filterwarnings = [
    "error",
    # triggered on Python 3.10 by dependencies
    "ignore: The distutils package is deprecated and slated for removal in Python 3.12. Use setuptools or check PEP 632 for potential alternatives:DeprecationWarning",
    # triggered from matplotlib 3.6 with yt <= 4.0.5
    "ignore: The register_cmap function will be deprecated in a future version.:PendingDeprecationWarning"
]

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = false

[tool.setuptools.package-data]
yt_idefix = [
    "py.typed",
]

[tool.setuptools.packages.find]
namespaces = false
