[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yt_idefix"
version = "2.4.2"
description = "An extension module for yt, adding a frontend for Idefix and Pluto"
authors = [
    { name = "C.M.T. Robert" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
keywords = [
    "astronomy astrophysics visualization amr adaptivemeshrefinement",
]
requires-python = ">=3.10.3"
dependencies = [
    "inifix>=4.1.0",
    "numpy>=1.21.2",
    "yt>=4.4.0",
    "typing-extensions>=4.4.0 ; python_version < '3.12'"
]

[project.optional-dependencies]
HDF5 = ["h5py>=3.7.0"]

[project.entry-points."yt.frontends"]
IdefixDmpkDataset = "yt_idefix.api:IdefixDmpDataset"
IdefixVtkDataset = "yt_idefix.api:IdefixVtkDataset"
PlutoVtkDataset = "yt_idefix.api:PlutoVtkDataset"
PlutoXdmfDataset = "yt_idefix.api:PlutoXdmfDataset"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://yt-project.org/"
Documentation = "https://yt-project.org/docs/dev/"
Source = "https://github.com/neutrinoceros/yt_idefix"
Tracker = "https://github.com/neutrinoceros/yt_idefix/issues"

[dependency-groups]
test = [
    "more-itertools>=8.4.0",
    "pyaml>=17.10.0",
    "pytest>=9.0.0",
]

typecheck = [
    "mypy>=1.13.0",
]

[tool.uv]
no-build-package = [
    "numpy",
    "matplotlib",
    "pillow",
    "pyparsing",
    "contourpy",
    "kiwisolver",
    "h5py",
    "ewah-bool-utils",
    "mpmath",
    "iniconfig",
    "pyyaml",
]
constraint-dependencies = [
    "matplotlib>=3.6.0", # can be cleaned once yt 4.5 is min
]



[tool.ruff.lint]
preview = true # needed for RUF031
explicit-preview-rules = true
exclude = [
    "*/api.py",
    "*/__init__.py",
]
select = [
    "E",
    "F",
    "W",
    "ARG",  # flake8-unused-arguments
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "G",    # flake8-logging-format
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
    "I",    # isort
    "NPY",  # numpy specific rules
    "RUF031"# incorrectly-parenthesized-tuple-in-subscript
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = [
  "numpy",
  "matplotlib",
  "unyt",
  "yaml",
  "pytest",
]
known-first-party = ["yt", "yt_idefix"]

[tool.mypy]
python_version = '3.10'
show_error_codes = true
warn_unused_configs = true
warn_unreachable = true
show_error_context = true

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error",
    # already patched (but not released) upstream:
    # https://github.com/dateutil/dateutil/pull/1285
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
]
