[metadata]
name = yt_idefix
version = 0.6.7
description = An extension module for yt, adding a frontend for Idefix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yt-project/yt
author = C.M.T. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
keywords = astronomy astrophysics visualization amr adaptivemeshrefinement
project_urls =
    Homepage=https://yt-project.org/
    Documentation=https://yt-project.org/docs/dev/
    Source=https://github.com/neutrinoceros/yt_idefix
    Tracker=https://github.com/neutrinoceros/yt_idefix/issues

[options]
packages = find:
install_requires =
    inifix>=0.8.0,<1.0
    yt[test]>=4.0.1,<5.0
python_requires = >=3.7

[flake8]
exclude =
    */api.py,                          # avoid spurious "unused import"
    */__init__.py,                     # avoid spurious "unused import"
ignore = E203, # Whitespace before ':' (black compatibility)
    E302, # Expected 2 blank lines, found 0
    E501, # Line too long (let Black deal with line-lenght)
    W503, # Line break occurred before a binary operator (black compatibility)
enable-extensions = G  # flake8-logging-format (extension is disabled by default)
